# Hotel-Booking-FastAPI

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
app/: config.py  conftest.py  database.py  exceptions.py  logger.py  main.py
app/admin/: auth.py  views.py
app/bookings/: models.py  repository.py  router.py  schemas.py  service.py
app/hotels/: models.py  repsitory.py  router.py  schemas.py  service.py
app/hotels/rooms/: models.py  repository.py  router.py  schemas.py  service.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: 2023_08_25_1522-9dbfbf6b57b5_initial_migration.py  2023_08_25_1705-03dbe2f4f74f_added_users_and_rooms_models.py  2023_08_25_1719-d7fa2d3dcf76_add_bookings_model.py  2023_08_28_1156-3b425eacc755_fix_type_annotations_in_models.py
app/pages/: router.py
app/repository/: base.py
app/tasks/: celery_setup.py  email_templates.py  scheduled_tasks.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py
app/tests/integration_tests/bookings_tests/: api_tests.py  repository_tests.py
app/tests/integration_tests/users_tests/: api_tests.py
app/tests/mocks/: mock_rooms.json  mock_users.json
app/tests/unit_tests/bookings_tests/: repository_tests.py
app/tests/unit_tests/hotels_tests/: api_tests.py
app/tests/unit_tests/users_tests/: api_tests.py  repository_tests.py
app/users/: auth.py  dependencies.py  models.py  repository.py  router.py  schemas.py
